Add animated gif

--- a/_posts/2015/2015-07-20-ghfvs-oss.md
+++ b/_posts/2015/2015-07-20-ghfvs-oss.md
@@ -12,7 +12,11 @@ Some of the challenge is in the fact that Visual Studio has been around a long t
 
 Fortunately, [Andreia](https://twitter.com/sh4na) and I had the help of the Visual Studio team at Microsoft as we worked together to add GitHub features to the release candidate for Visual Studio 2015 [last April](https://github.com/blog/1989-improving-the-github-workflow-for-the-microsoft-community). Not to mention the fact that Andreia has more Visual Studio extensibility experience in her pinky than ten of me would have.
 
-Well today Microsoft announced the [RTM of Visual Studio 2015](http://blogs.msdn.com/b/visualstudio/archive/2015/07/20/visual-studio-2015-and-visual-studio-2013-update-5-released.aspx) (Congratulations!) and we figured what better time to open up the code we used to build the extension. In discussions with the Visual Studio team, we all agreed that the more real world examples of Visual Studio extensions are out there, the better for everyone. This is in part why [we released the GitHub Extension for Visual Studio](https://github.com/blog/2038-github-extension-for-visual-studio-is-open-source) under the MIT license today.
+Well today Microsoft announced the [RTM of Visual Studio 2015](http://blogs.msdn.com/b/visualstudio/archive/2015/07/20/visual-studio-2015-and-visual-studio-2013-update-5-released.aspx). Congratulations!
+
+![Glad I dry cleaned the tux for this occasion](https://raw.githubusercontent.com/Haacked/gifs/master/classy/leo-toast.gif)
+
+We figured what better time to open up the code we used to build the extension. In discussions with the Visual Studio team, we all agreed that the more real world examples of Visual Studio extensions are out there, the better for everyone. This is in part why [we released the GitHub Extension for Visual Studio](https://github.com/blog/2038-github-extension-for-visual-studio-is-open-source) under the MIT license today.
 
 ### The Future
 
