Question deserves a question mark
Former-commit-id: 563afab3e72d3e06df38f01bd6b54ee84a5803ab

--- a/_posts/2015/2015-07-20-ghfvs-oss.md
+++ b/_posts/2015/2015-07-20-ghfvs-oss.md
@@ -16,7 +16,7 @@ Well today Microsoft announced the [RTM of Visual Studio 2015](http://blogs.msdn
 
 ![Glad I dry cleaned the tux for this occasion](https://raw.githubusercontent.com/Haacked/gifs/master/classy/leo-toast.gif)
 
-We figured what better time to open up the code we used to build the extension. In discussions with the Visual Studio team, we all agreed that the more real world examples of Visual Studio extensions are out there, the better for everyone. This is in part why [we released the GitHub Extension for Visual Studio](https://github.com/blog/2038-github-extension-for-visual-studio-is-open-source) under the MIT license today.
+We figured, what better time than now to open up the code we used to build the extension? In discussions with the Visual Studio team, we all agreed that the more real world examples of Visual Studio extensions are out there, the better for everyone. This is in part why [we released the GitHub Extension for Visual Studio](https://github.com/blog/2038-github-extension-for-visual-studio-is-open-source) under the MIT license today.
 
 ### The Future
 
