--- a/_posts/archived/2006-08-09-asp.netsupervisingcontrollermodelviewpresenterfromschematictounitteststocode.aspx.markdown
+++ b/_posts/archived/2006-08-09-asp.netsupervisingcontrollermodelviewpresenterfromschematictounitteststocode.aspx.markdown
@@ -3,6 +3,7 @@ layout: post
 title: "ASP.NET Supervising Controller (Model View Presenter) From Schematic To Unit Tests to Code"
 date: 2006-08-09 -0800
 comments: true
+redirect_from: "/archive/2006/08/09/ASP.NETSupervisingControllerModelViewPresenterFromSchematicToUnitTestsToCode.aspx"
 disqus_identifier: 14779
 categories: [asp.net,code,asp.net mvc]
 ---
