Add example of GitHub PS profile
Former-commit-id: 7fe77c724c51571b23a304cb4c94e5964ee2190e
Former-commit-id: d7c4024ddea3a2d7a48bf491eaf59a3950214a47
Former-commit-id: 98f8c316f02e2325e536095f3f9fcd33c20c97c1 [formerly 8fdc7bfa0a0d48f3f6d25c1df3b275c8c2ae7e56]
Former-commit-id: c3d7a4619b5517900a67b0dc16b00b34912bdbbe

--- a/_posts/2015/2015-10-28-git-shell.md
+++ b/_posts/2015/2015-10-28-git-shell.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Setting up a nice Git shell"
+title: "Set up a smoking Git shell on Windows"
 date: 2015-10-28 -0800
 comments: true
 categories: [git github console shell]
@@ -10,9 +10,11 @@ categories: [git github console shell]
 
 ![GitHub Desktop Screenshot](https://cloud.githubusercontent.com/assets/19977/10811215/dfcde99c-7dc6-11e5-885d-8d990a13c001.png)
 
-At the same time, I often hear from people that they don't need a GUI because they're perfectly happy to use the command line. If you feel this way, that's great! I hope to change your mind in a set of upcoming blog posts that will show how GitHub Desktop augments and complements the command line in a nice and powerful way.
+At the same time, I often hear from people that they don't need a GUI because they're perfectly happy to use the command line. If you feel this way, that's great! I love the command line too! Let's be friends!
 
-In the meanwhile, I think it's important to know that __GitHub Desktop is the easiest, fastest, and best way to get the Git command line set up on a Windows machine and keep it up to date.__
+Even so, in a set of upcoming blog posts, I hope to convince you that GitHub Desktop is one GUI application that augments and complements the Git command line in such a powerful way that you'll want to integrate it into your Git workflow.
+
+But for now, I'll settle for convincing you that __GitHub Desktop is the easiest, fastest, and best way to get the Git command line set up on a Windows machine and keep that installation up to date.__
 
 ### Installation
 
@@ -22,7 +24,7 @@ Once you install, you'll notice a GitHub icon and a Git Shell Icon on your deskt
 
 <img src="https://cloud.githubusercontent.com/assets/19977/10811251/25b3693c-7dc7-11e5-9776-bd21617477f1.png" width="152" alt="GitHub Desktop Icons" title="GitHub Desktop icons" />
 
-By default, the Git Shell icon launches PowerShell with Git set up. You can also launch the Git Shell from within the Desktop GUI application by using the `~` key or by using the gear menu in the top right and selecting "Open Shell."
+By default, the Git Shell shortcut launches PowerShell with Git set up. You can also launch the Git Shell from the Desktop GUI application by using the `~` key or by using the gear menu in the top right and selecting "Open Shell."
 
 Support for the `~` key to launch the shell was inspired by the 3D shooter Quake which uses that key to bring up the console within the game. Many thanks to [Scott Hanselman](http://www.hanselman.com/) for that idea.
 
@@ -53,7 +55,7 @@ We regularly update the version of Posh-Git we include. You don't have to manage
 
 ### PowerShell Configuration
 
-One thing to note is that if you PowerShell via some other means other than our Git Shell icon or the Desktop application, our version of Git won't be there. That's because we install a portable version of Git that does not change any of your system settings.
+One thing to note is that if you launch PowerShell via some other means other than our Git Shell shortcut or the Desktop application, our version of Git won't be there. That's because we install a portable version of Git that does not change any of your system settings.
 
 You can add our version of Git to your PowerShell profile so it's always there. Simply edit the following PowerShell profile document: `%UserProfile%\Documents\WindowsPowershell\Microsoft.Powershell_profile.ps1`
 
@@ -75,9 +77,22 @@ Write-Host "Setting up Posh-Git"
 
 `$env:github_posh_git` is one of the environment variables that `Shell.ps1` sets up.
 
-The other thing to note is if you have already customized PowerShell with a profile, launching the Git Shell via the GitHub Desktop application or Git Shell icon doesn't load your profile. We worried about conflicts with existing Posh-Git installs or whatever you might have. Instead, we execute a custom profile script if it exists, `GitHub.PowerShell_profile.ps1`.
+The other thing to note is if you have already customized PowerShell with a profile, launching the Git Shell via the GitHub Desktop application or Git Shell icon doesn't load your existing PowerShell profile. We wanted to avoid conflicts with existing Posh-Git installs or whatever you might have. Instead, we execute a custom profile script if it exists, `GitHub.PowerShell_profile.ps1`.
 
-Just create one in the same directory as your `$profile` script (typcially `%UserProfile%\Documents\WindowsPowershell\`).
+Just create a file with that name in the same directory as your `$profile` script (typcially `%UserProfile%\Documents\WindowsPowershell\`) and you can load your profile from there.
+
+Here's the full contents of my `GitHub.PowerShell_profile.ps1`.
+
+```posh
+Write-Host "Setting environment for GitHub Powershell Profile"
+
+$dir = (Split-Path -Path $MyInvocation.MyCommand.Definition -Parent)
+Push-Location $dir
+
+. (Resolve-Path "$dir\Microsoft.Powershell_profile.ps1")
+
+Pop-Location
+```
 
 ### Turbocharge the Shell with ConsoleZ
 
@@ -92,7 +107,13 @@ Then in GitHub Desktop, go to the `Tools` menu (top right gear icon), select `Op
 You're not quite done yet. By default, ConsoleZ loads the Command shell. You'll want to change it so it loads PowerShell.
 
 * Right-click in the main console and click `Edit` | `Settings`.
-* Under `Tabs`, paste the path `%SystemRoot%\syswow64\WindowsPowerShell\v1.0\powershell.exe` into the "Shell" text box. If you want to get really fancy, you could use one of the GitHub icons here such as http://haacked.com/images/icons/Shell.ico or http://haacked.com/images/icons/App.ico
+* Under `Tabs`, paste the path `%SystemRoot%\syswow64\WindowsPowerShell\v1.0\powershell.exe` into the "Shell" text box.
+
+<img src="https://cloud.githubusercontent.com/assets/19977/10811324/f800b14c-7dc7-11e5-9f0c-9e17ab032825.png" width="531" title="ConsoleZ Tab Settings" alt="ConsoleZ Tab Settings" />
+
+You'll notice I got a little fancy and use the Git Shell icon for the tab. You can do the same by [downloading the Icon from here](http://haacked.com/images/icons/Shell.ico) (or use our [Octocat App Icon](http://haacked.com/images/icons/App.ico)). I saved the icon to the `%LocalAppData%\GitHub\icons` directory and then pasted the path to the Icon in the Icon text box.
+
+### Customize ConsoleZ
 
 That's just enough to make ConsoleZ work with Desktop. But since you're going to be spending a lot of time in the shell, let's really turbo charge it. The following are a set of customizations adapted from [Scott Hanselman's Console2 blog post](http://www.hanselman.com/blog/Console2ABetterWindowsCommandPrompt.aspx). I've made a few small tweaks in places to ensure that the customizations don't interfere with the Git Shell functionality.
 
@@ -104,10 +125,21 @@ That's just enough to make ConsoleZ work with Desktop. But since you're going to
 * Under `Hotkeys`, set "Group Tab" to something else like `CTRL+ALT+T`. This frees you up to change the "New Tab 1" hotkey to  `CTRL+T` as God intended. You'll have to click on the hotkey, then in the textbox, then type the hot-key you want AND press the `Assign` button for it to stick.
 * Under `Hotkeys`, change "Copy Selection" to `Ctrl-C` and "Paste" to `Ctrl-V`
 
-Here's what it looks like on my machine.
+Here's what it looks like on my machine. You can see my background image poking through.
 
-![consolez-8bit](https://cloud.githubusercontent.com/assets/19977/10810919/7c4a373e-7dc3-11e5-89ea-76d9ebd88003.png)
-
+![ConsoleZ Customized](https://cloud.githubusercontent.com/assets/19977/10811390/b889d218-7dc8-11e5-935d-45dcf6830a29.png)
 Finally, one setting that makes ConsoleZ feel really badass to me is to go to `Appearance` | `Full Screen` and check "Start in full screen". I've been using this for a bit and it's growing on me. Just remember, hit `ALT+F4` or type `exit` to close it.
 
+### Upgrades
+
+We've put a lot of work to ensure that GitHub Desktop silently and  automatically updates itself. When we ship an update, you'll see a subtle notification in the application (a little up arrow in the top right) that an update is available. You'll be updated when restart the application.
+
+Updating Desktop also updates Posh-Git, the Git command line, and [Git LFS](https://github.com/blog/1986-announcing-git-large-file-storage-lfs) for those in need of large file storage. It's convenient to have all of that updated for you without having to track each update down individually.
+
 ### Conclusion
+
+With these customizations in place, you'll have a really great Git command line setup. Follow this up with some of my [Git aliases](http://haacked.com/archive/2014/07/28/github-flow-aliases/) and you'll really be smoking.
+
+Be careful though, a setup like this communicates that you're a Git Pro and everyone will start to bug you with their Git problems. Just remember, `git reflog` is your friend.
+
+In some follow-up posts, I'll demonstrate how this setup works really nicely in tandem with GitHub Desktop.
