GitHub Workflow yo!
Former-commit-id: 70a05988c5995530eea353180356eed1046889bb
Former-commit-id: c63444aeb50f87e56fc2e59e6c4d6977e6a9da25
Former-commit-id: 52829c5b3f8639045e5cea54a559c7c42f13b82a [formerly ae6ecdd0a68d6bbdc0947094d33242d87b795f4b]
Former-commit-id: 86ca266d695ea9ed845fc3a8b48614d081eb9b1b

--- a/_posts/2015/2015-10-29-git-shell.md
+++ b/_posts/2015/2015-10-29-git-shell.md
@@ -12,7 +12,7 @@ categories: [git github console shell]
 
 At the same time, I often hear from people that they don't need a GUI because they're perfectly happy to use the command line. If you feel this way, that's great! I love the command line too! Let's be friends!
 
-Even so, in a set of upcoming blog posts, I hope to convince you that GitHub Desktop is one GUI application that augments and complements the Git command line in such a powerful way that you'll want to integrate it into your Git workflow.
+Even so, in a set of upcoming blog posts, I hope to convince you that GitHub Desktop is one GUI application that augments and complements the Git command line in such a powerful way that you'll want to integrate it into your GitHub workflow.
 
 But for now, I'll settle for convincing you that __GitHub Desktop is the easiest, fastest, and best way to get the Git command line set up on a Windows machine and keep that installation up to date.__
 
