--- a/_posts/2015/2015-10-29-git-shell.md
+++ b/_posts/2015/2015-10-29-git-shell.md
@@ -35,7 +35,7 @@ We often mention that we install Git with "sane defaults." What do we mean by th
 > Q: How do you generate a random string?
 > A: Put a Windows user in front of vi, and tell them to exit
 
-I can't take credit for it. The first instance I've found [is on Twitter](https://twitter.com/aaronjorbin/status/576487768530001920) by Aaron Jorbin.
+I can't take credit for this joke. The first instance I've found [is on Twitter](https://twitter.com/aaronjorbin/status/576487768530001920) by Aaron Jorbin.
 
 By default, Git sets vi as the default commit editor. Statistically speaking, that's never the right answer for Windows users. GitHub Desktop sets your default editor (typically NotePad) as the default editor via the [open source GitPad tool](https://github.com/github/gitpad).
 
