Clarify Open in Git Shell menu

--- a/_posts/2015/2015-10-29-git-shell.md
+++ b/_posts/2015/2015-10-29-git-shell.md
@@ -24,7 +24,9 @@ Once you install, you'll notice a GitHub icon and a Git Shell Icon on your deskt
 
 <img src="https://cloud.githubusercontent.com/assets/19977/10811251/25b3693c-7dc7-11e5-9776-bd21617477f1.png" width="152" alt="GitHub Desktop Icons" title="GitHub Desktop icons" />
 
-By default, the Git Shell shortcut launches PowerShell with Git set up. You can also launch the Git Shell from the Desktop GUI application by using the `~` key or by using the gear menu in the top right and selecting "Open Shell."
+By default, the Git Shell shortcut launches PowerShell with Git set up. You can also launch the Git Shell from the Desktop GUI application by using the `~` key or by using the gear menu in the top right and selecting "Open in Git Shell."
+
+<img src="https://cloud.githubusercontent.com/assets/19977/10824175/8d841c96-7e1c-11e5-9d71-3612d87aeed6.png" width="300" />
 
 Support for the `~` key to launch the shell was inspired by the 3D shooter Quake which uses that key to bring up the console within the game. Many thanks to [Scott Hanselman](http://www.hanselman.com/) for that idea.
 
