tweaking some words

--- a/_posts/2015/2015-10-29-git-shell.md
+++ b/_posts/2015/2015-10-29-git-shell.md
@@ -43,9 +43,9 @@ By default, Git sets vi as the default commit editor. Statistically speaking, th
 
 ### Posh-Git
 
-The other "sane default" is that we include [Posh-Git](https://github.com/dahlbyk/posh-git) (written by [Keith Dahlby](https://github.com/dahlbyk)) with our installation.
+The other "sane default" is that we include [Posh-Git](https://github.com/dahlbyk/posh-git) (maintained by [Keith Dahlby](https://github.com/dahlbyk)) with our installation.
 
-When you launch the shell, you’ll notice that the PowerShell option includes Posh-Git by Keith Dahlby. Posh-Git provides tab completion within PowerShell for Git commands and Git data. For example, you can type `git {TAB}`, where `{tab}` is the `TAB` key, and it will complete with the first Git command (`abort` in this case). Keep hitting `TAB` to cycle through all the Git commands.
+When you launch the shell, you’ll notice that the Powershell window now has a Git enhanced prompt, displaying your current branch name. Posh-Git provides tab completion within PowerShell for Git commands and Git data. For example, you can type `git {TAB}`, where `{tab}` is the `TAB` key, and it will complete with the first Git command (`abort` in this case). Keep hitting `TAB` to cycle through all the Git commands.
 
 Likewise, if you type `git checkout b{tab}`, you can cycle through all branches in your repository that start with `b`.
 
