--- a/_posts/2015/2015-10-29-git-shell.md
+++ b/_posts/2015/2015-10-29-git-shell.md
@@ -129,7 +129,7 @@ That's just enough to make ConsoleZ work with Desktop. But since you're going to
 
 Here's what it looks like on my machine. You can see my background image poking through.
 
-![Customized Console](https://cloud.githubusercontent.com/assets/19977/10824649/78c22a08-7e1e-11e5-9824-436c943b487b.png)
+![Customized ConsoleZ](https://cloud.githubusercontent.com/assets/19977/10824699/b260c9b8-7e1e-11e5-958a-f3f4911abfb8.png)
 
 Finally, one setting that makes ConsoleZ feel really badass to me is to go to `Appearance` | `Full Screen` and check "Start in full screen". I've been using this for a bit and it's growing on me. Just remember, hit `ALT+F4` or type `exit` to close it.
 
