--- a/_posts/2015/2015-10-29-git-shell.md
+++ b/_posts/2015/2015-10-29-git-shell.md
@@ -6,15 +6,15 @@ comments: true
 categories: [git github console shell]
 ---
 
-[GitHub Desktop](https://desktop.github.com/), the application formerly known as GitHub for Windows, is a nice streamlined GUI focused on making it easy to contribute to repositories on GitHub.
+[GitHub Desktop](https://desktop.github.com/), the application formerly known as GitHub for Windows, is a streamlined GUI that makes it easy to contribute to repositories on GitHub.
 
 ![GitHub Desktop Screenshot](https://cloud.githubusercontent.com/assets/19977/10811215/dfcde99c-7dc6-11e5-885d-8d990a13c001.png)
 
 At the same time, I often hear from people that they don't need a GUI because they're perfectly happy to use the command line. If you feel this way, that's great! I love the command line too! Let's be friends!
 
-Even so, in a set of upcoming blog posts, I hope to convince you that GitHub Desktop is one GUI application that augments and complements the Git command line in such a powerful way that you'll want to integrate it into your GitHub workflow.
+Even so, in a set of blog posts I plan to write, I hope to convince you that GitHub Desktop is one GUI application that augments and complements the Git command line in such a powerful way that you'll want to integrate it into your GitHub workflow.
 
-But for now, I'll settle for convincing you that __GitHub Desktop is the easiest, fastest, and best way to get the Git command line set up on a Windows machine and keep that installation up to date.__
+But for now, I'll work to convince you that __GitHub Desktop is the easiest, fastest, and best way to get the Git command line set up on a Windows machine and keep that installation up to date.__
 
 ### Installation
 
@@ -24,7 +24,7 @@ Once you install, you'll notice a GitHub icon and a Git Shell Icon on your deskt
 
 <img src="https://cloud.githubusercontent.com/assets/19977/10811251/25b3693c-7dc7-11e5-9776-bd21617477f1.png" width="152" alt="GitHub Desktop Icons" title="GitHub Desktop icons" />
 
-By default, the Git Shell shortcut launches PowerShell with Git set up. You can also launch the Git Shell from the Desktop GUI application by using the `~` key or by using the gear menu in the top right and selecting "Open in Git Shell."
+By default, the Git Shell shortcut launches PowerShell with Git set up. You can also launch the Git Shell from the Desktop GUI application by pressing the `~` key or via the gear menu in the top right. Select the "Open in Git Shell" menu item.
 
 <img src="https://cloud.githubusercontent.com/assets/19977/10824175/8d841c96-7e1c-11e5-9d71-3612d87aeed6.png" width="300" />
 
@@ -45,11 +45,11 @@ By default, Git sets vi as the default commit editor. Statistically speaking, th
 
 The other "sane default" is that we include [Posh-Git](https://github.com/dahlbyk/posh-git) (maintained by [Keith Dahlby](https://github.com/dahlbyk)) with our installation.
 
-When you launch the shell, you’ll notice that the Powershell window now has a Git enhanced prompt, displaying your current branch name. Posh-Git provides tab completion within PowerShell for Git commands and Git data. For example, you can type `git {TAB}`, where `{tab}` is the `TAB` key, and it will complete with the first Git command (`abort` in this case). Keep hitting `TAB` to cycle through all the Git commands.
+When you launch the shell, you’ll notice that the Powershell window now has a Git enhanced prompt that displays your current branch name. Posh-Git provides tab completion within PowerShell for Git commands and Git data. For example, you can type `git {TAB}`, where `{tab}` is the `TAB` key, and it will complete with the first Git command (`abort` in this case). Keep pressing `TAB` to cycle through all the Git commands.
 
 Likewise, if you type `git checkout b{tab}`, you can cycle through all branches in your repository that start with `b`.
 
-The following animated gif shows me cycling through all my repository's branches.
+Here is an animated gif that shows what it looks like to tab through all my repository's branches.
 
 ![Posh-Git Tab Expansion](http://haacked.com/images/haacked_com/Windows-Live-Writer/Git-Smooth-with-PowerShell_94DB/ps-tab-expansion_thumb.gif)
 
@@ -59,9 +59,9 @@ We regularly update the version of Posh-Git we include. You don't have to manage
 
 One thing to note is that if you launch PowerShell via some other means other than our Git Shell shortcut or the Desktop application, our version of Git won't be there. That's because we install a portable version of Git that does not change any of your system settings.
 
-You can add our version of Git to your PowerShell profile so it's always there. Simply edit the following PowerShell profile document: `%UserProfile%\Documents\WindowsPowershell\Microsoft.Powershell_profile.ps1`
+You can add our version of Git to your PowerShell profile so it's always there. Simply edit the PowerShell profile document: `%UserProfile%\Documents\WindowsPowershell\Microsoft.Powershell_profile.ps1`
 
-Add the following snippet.
+Add this snippet to the file.
 
 ```posh
 Write-Host "Setting up GitHub Environment"
@@ -70,7 +70,7 @@ Write-Host "Setting up GitHub Environment"
 
 `Shell.ps1` contains the environment settings that the Desktop application uses when it launches the Git Shell.
 
-You can also have your default profile load up Posh-Git if you haven't already. Make sure the following snippet comes _after_ the previous one.
+You can also have your default profile load up Posh-Git if you haven't already. Make sure this snippet comes _after_ the previous one.
 
 ```posh
 Write-Host "Setting up Posh-Git"
@@ -79,9 +79,9 @@ Write-Host "Setting up Posh-Git"
 
 `$env:github_posh_git` is one of the environment variables that `Shell.ps1` sets up.
 
-The other thing to note is if you have already customized PowerShell with a profile, launching the Git Shell via the GitHub Desktop application or Git Shell icon doesn't load your existing PowerShell profile. We wanted to avoid conflicts with existing Posh-Git installs or whatever you might have. Instead, we execute a custom profile script if it exists, `GitHub.PowerShell_profile.ps1`.
+The other thing to note is if you have already customized PowerShell with a profile, the Git Shell doesn't load your existing PowerShell profile. We wanted to avoid conflicts with existing Posh-Git installs or whatever else you might have. To load your existing profile requires you to opt into this behavior. To do this, create a PowerShell script file named `GitHub.PowerShell_profile.ps1`. Desktop will execute this file, if it exists.
 
-Just create a file with that name in the same directory as your `$profile` script (typcially `%UserProfile%\Documents\WindowsPowershell\`) and you can load your profile from there.
+Desktop looks for this file in the same directory as your `$profile` script (typcially `%UserProfile%\Documents\WindowsPowershell\`). I simply load my regular profile from that script.
 
 Here's the full contents of my `GitHub.PowerShell_profile.ps1`.
 
@@ -98,7 +98,7 @@ Pop-Location
 
 ### Turbocharge the Shell with ConsoleZ
 
-I've never been a fan of the default blue PowerShell console. So I use a fork of Console2 called [ConsoleZ](https://github.com/cbucher/console). If you have [Chocolatey](https://chocolatey.org/) installed, you can run the following command to install ConsoleZ:
+Hey, you're an individual and you need to express that individuality. Nothing says "I'm boring" like the default blue PowerShell console (if you do always use the default, ignore what I just said. You might be the _real_ noncomformist). I express my individuality with a fork of Console2 called [ConsoleZ](https://github.com/cbucher/console) just like every one of my friends! If you have [Chocolatey](https://chocolatey.org/) installed, you can run this command to install ConsoleZ:
 
 `chocolatey install ConsoleZ`
 
@@ -113,11 +113,11 @@ You're not quite done yet. By default, ConsoleZ loads the Command shell. You'll 
 
 <img src="https://cloud.githubusercontent.com/assets/19977/10811324/f800b14c-7dc7-11e5-9f0c-9e17ab032825.png" width="531" title="ConsoleZ Tab Settings" alt="ConsoleZ Tab Settings" />
 
-You'll notice I got a little fancy and use the Git Shell icon for the tab. You can do the same by [downloading the Icon from here](http://haacked.com/images/icons/Shell.ico) (or use our [Octocat App Icon](http://haacked.com/images/icons/App.ico)). I saved the icon to the `%LocalAppData%\GitHub\icons` directory and then pasted the path to the Icon in the Icon text box.
+You'll notice I got a little fancy and use the Git Shell icon for the tab. I put [icon here](http://haacked.com/images/icons/Shell.ico) (or use our [Octocat App Icon](http://haacked.com/images/icons/App.ico)) so you can download it and do the same if you'd like. I saved the icon to the `%LocalAppData%\GitHub\icons` directory and then pasted the path to the Icon in the Icon text box.
 
 ### Customize ConsoleZ
 
-That's just enough to make ConsoleZ work with Desktop. But since you're going to be spending a lot of time in the shell, let's really turbo charge it. The following are a set of customizations adapted from [Scott Hanselman's Console2 blog post](http://www.hanselman.com/blog/Console2ABetterWindowsCommandPrompt.aspx). I've made a few small tweaks in places to ensure that the customizations don't interfere with the Git Shell functionality.
+That's just enough to make ConsoleZ work with Desktop. But since you'll spend a lot of time in the shell, let's really turbo charge it. Here is a set of customizations adapted from [Scott Hanselman's Console2 blog post](http://www.hanselman.com/blog/Console2ABetterWindowsCommandPrompt.aspx). I've made a few small tweaks in places to ensure that the customizations don't interfere with the Git Shell functionality.
 
 * Under the `Console` tab, __do not enter a value for the "Startup Dir" setting__ as Hanselman suggests. When you launch the Git Shell from the Desktop application, it will set the working directory to the currently selected repository's working directory. If you set ConsoleZ's startup directory, then that feature of Desktop is overridden. If you don't care about this feature, by all means set a startup directory.
 * * Under the `Console` tab, do play around with the Columns and Rows. I have mine set to 30 rows, and 80 columns.
@@ -137,7 +137,7 @@ Finally, one setting that makes ConsoleZ feel really badass to me is to go to `A
 
 We've put a lot of work to ensure that GitHub Desktop silently and  automatically updates itself. When we ship an update, you'll see a subtle notification in the application (a little up arrow in the top right) that an update is available. You'll be updated when restart the application.
 
-Updating Desktop also updates Posh-Git, the Git command line, and [Git LFS](https://github.com/blog/1986-announcing-git-large-file-storage-lfs) for those in need of large file storage. It's convenient to have all of that updated for you without having to track each update down individually.
+Desktop updates also include updates to Posh-Git, the Git command line, and [Git LFS](https://github.com/blog/1986-announcing-git-large-file-storage-lfs) for those in need of large file storage. It's convenient to have all of that updated for you automatically so you don't have to track down each update down individually.
 
 ### Conclusion
 
