We update so you don't have to
Former-commit-id: eaad0a9a3dd4204cdc7a4b626510637321079e47
Former-commit-id: c1f208ba46843536955e67e97ed08f372ba17cc3
Former-commit-id: 0b36d3ac8550ad999f948425bb71d32315fe8ad6 [formerly 9243b184dafdc1108b5a98a2bedb89d533786ce0]
Former-commit-id: 6179d2369f43896f0f7558a8a9abf35446700c68

--- a/_posts/2015/2015-10-29-git-shell.md
+++ b/_posts/2015/2015-10-29-git-shell.md
@@ -141,7 +141,7 @@ Desktop updates also include updates to Posh-Git, the Git command line, and [Git
 
 ### Conclusion
 
-With these customizations in place, you'll have a really great Git command line setup. Follow this up with some of my [Git aliases](http://haacked.com/archive/2014/07/28/github-flow-aliases/) and you'll really be smoking.
+With these customizations in place, you'll have a really great Git command line setup that we'll work hard to keep up to date so you don't have to. In fact, we have a few updates coming up very soon! Follow this up with some of my [Git aliases](http://haacked.com/archive/2014/07/28/github-flow-aliases/) and you'll really be smoking.
 
 Be careful though, a setup like this communicates that you're a Git Pro and everyone will start to bug you with their Git problems. Just remember, `git reflog` is your friend.
 
