More on updates
Former-commit-id: c9c483e6f3988fd70776eb41a5a36441cd066cf3
Former-commit-id: 25be9d112f2685be11478c29772ba3af7bd00419
Former-commit-id: 5ec1f3e8bf545315431c0b39972c113526250dda [formerly 7d089e07a0597d128e97b1829f29642c731afe1f]
Former-commit-id: 4b00949414c0335b88bf6e9a0f0a79bfdf313c59

--- a/_posts/2015/2015-10-29-git-shell.md
+++ b/_posts/2015/2015-10-29-git-shell.md
@@ -53,8 +53,6 @@ Here is an animated gif that shows what it looks like to tab through all my repo
 
 ![Posh-Git Tab Expansion](http://haacked.com/images/haacked_com/Windows-Live-Writer/Git-Smooth-with-PowerShell_94DB/ps-tab-expansion_thumb.gif)
 
-We regularly update the version of Posh-Git we include. You don't have to manage this yourself. When Desktop updates automatically, you automatically get the latest version of Posh-Git.
-
 ### PowerShell Configuration
 
 One thing to note is that if you launch PowerShell via some other means other than our Git Shell shortcut or the Desktop application, our version of Git won't be there. That's because we install a portable version of Git that does not change any of your system settings.
@@ -133,11 +131,13 @@ Here's what it looks like on my machine. You can see my background image poking 
 
 Finally, one setting that makes ConsoleZ feel really badass to me is to go to `Appearance` | `Full Screen` and check "Start in full screen". I've been using this for a bit and it's growing on me. Just remember, hit `ALT+F4` or type `exit` to close it.
 
-### Upgrades
+### Updates
 
-We've put a lot of work to ensure that GitHub Desktop silently and  automatically updates itself. When we ship an update, you'll see a subtle notification in the application (a little up arrow in the top right) that an update is available. You'll be updated when restart the application.
+We put in a lot of work to ensure that GitHub Desktop silently and automatically updates itself. When we ship an update, you'll see a subtle notification in the application (a little up arrow in the top right) that an update is available. Just restart the application to install the update.
 
-Desktop updates also include updates to Posh-Git, the Git command line, and [Git LFS](https://github.com/blog/1986-announcing-git-large-file-storage-lfs) for those in need of large file storage. It's convenient to have all of that updated for you automatically so you don't have to track down each update down individually.
+Desktop updates also include updates to Posh-Git, the Git command line, and [Git LFS](https://github.com/blog/1986-announcing-git-large-file-storage-lfs). It's convenient to have all of that updated for you automatically so you don't have to track down each update individually.
+
+__We keep everything updated so you don't have to.__
 
 ### Conclusion
 
