Make that a link
I thought auto-linking was on but I was wrong.

Former-commit-id: cdb2d8920197f1832e77ae3f947a61e0784ec89b

--- a/_posts/2015/2015-10-29-git-shell.md
+++ b/_posts/2015/2015-10-29-git-shell.md
@@ -18,7 +18,7 @@ But for now, I'll work to convince you that __GitHub Desktop is the easiest, fas
 
 ### Installation
 
-Installation is easy. Visit https://desktop.github.com/ and click the big blue button that says "Download GitHub Desktop." We use ClickOnce to streamline the installation process.
+Installation is easy. Visit [desktop.github.com](https://desktop.github.com/) and click the big blue button that says "Download GitHub Desktop." We use ClickOnce to streamline the installation process.
 
 Once you install, you'll notice a GitHub icon and a Git Shell Icon on your desktop.
 
