--- a/_posts/2015/2015-10-29-git-shell.md
+++ b/_posts/2015/2015-10-29-git-shell.md
@@ -41,7 +41,7 @@ I can't take credit for this joke. The first instance I've found [is on Twitter]
 
 By default, Git sets vi as the default commit editor. Statistically speaking, that's never the right answer for Windows users. GitHub Desktop sets your default editor (typically NotePad) as the default editor via the [open source GitPad tool](https://github.com/github/gitpad).
 
-Also, GitHub Desktop sets itself up as the Git credential provider. That way, you can log into the app and we'll handle the credential management when you push to or pull from GitHub. This is especially useful if you have two-factor authentication enabled (WHICH YOU SHOULD!) as we handle the 2fa dance on your behalf. There's no need for messing around with personal access (OAuth) tokens.
+Also, GitHub Desktop sets itself up as the Git credential provider. That way, you can log into the app and we'll handle the credential management when you push to or pull from GitHub using the Git command line. This is especially useful if you have two-factor authentication enabled (WHICH YOU SHOULD!) as we handle the 2fa dance on your behalf. There's no need for messing around with personal access (OAuth) tokens.
 
 ### Posh-Git
 
