--- a/_posts/2015/2015-10-29-git-shell.md
+++ b/_posts/2015/2015-10-29-git-shell.md
@@ -24,7 +24,7 @@ Once you install, you'll notice a GitHub icon and a Git Shell Icon on your deskt
 
 <img src="https://cloud.githubusercontent.com/assets/19977/10811251/25b3693c-7dc7-11e5-9776-bd21617477f1.png" width="152" alt="GitHub Desktop Icons" title="GitHub Desktop icons" />
 
-By default, the Git Shell shortcut launches PowerShell with Git set up. You can also launch the Git Shell from the Desktop GUI application by pressing the `~` key or via the gear menu in the top right. Select the "Open in Git Shell" menu item.
+By default, the Git Shell shortcut launches PowerShell with Git set up. You can also launch the Git Shell from the Desktop GUI application by pressing the `~` key (or `CTRL` + `~` at any time such as when a text field has focus) or via the gear menu in the top right. Select the "Open in Git Shell" menu item.
 
 <img src="https://cloud.githubusercontent.com/assets/19977/10824175/8d841c96-7e1c-11e5-9d71-3612d87aeed6.png" width="300" />
 
