Fix up the URLs
Former-commit-id: 816b32931bce019d189ede817592abb87fff2871

--- a/_posts/2015/2015-12-31-a-haackedy-2015.md
+++ b/_posts/2015/2015-12-31-a-haackedy-2015.md
@@ -20,9 +20,10 @@ the wall.
 
 So, um, yeah. I write for myself. But when others than your close friends and
 family (well, my family long since stopped reading it) start to read it, it's
-easy to lose sight of that fact.
+easy to lose sight of that fact. Also, I'm on a train to Portland and I don't
+really have anything much better to do.
 
-So here it is, my 2015 in review.
+So on that note, here it is, my look back at 2015.
 
 ## Highlights
 
@@ -40,7 +41,7 @@ have a wonderful time speaking about GitHub to the Latin American audience and
 exploring the old forts like I was inside Assassin's Creed Black Flag. In 2016
 I'll be speaking in Peru!
 
-### [The release of GitHub Extension for Visual Studio][ghfvs]
+### [The release of GitHub Extension for Visual Studio](http://haacked.com/archive/2015/04/30/github-in-your-visual-studio/)
 
 This was a fun collaboration with Microsoft and represents just the beginning. We later [made it open source](http://haacked.com/archive/2015/07/20/ghfvs-oss/)! In 2016, we plan to invest a lot more time and energy into the extension to make your experience working with GitHub projects from Visual Studio better.
 
@@ -76,7 +77,3 @@ will be exciting.
 
 Other than that, I haven't really confirmed anywhere else. Perhaps we'll throw
 another .NET Fringe.
-
-
-[ghfvs](http://haacked.com/archive/2015/04/30/github-in-your-visual-studio/)
-[ghfvs-oss](http://haacked.com/archive/2015/07/20/ghfvs-oss/)
