Reformat and link properly.

--- a/_posts/2015/2015-12-31-a-haackedy-2015.md
+++ b/_posts/2015/2015-12-31-a-haackedy-2015.md
@@ -6,74 +6,62 @@ comments: true
 categories: [personal]
 ---
 
-I planned to skip the tried and true _year in review_ post because who reads
-such drivel anyways, amirite? They feel like one big exercise in vanity.
+I planned to skip the tried and true _year in review_ post because who reads such drivel anyways, amirite? They feel like one big exercise in vanity.
 
-But it dawned on me. Perhaps, I lost touch with what blogging was all about.
-What it's _always_ been all about. Hasn't it always been one big unabashed and
-[unashamed exercise in vanity](http://haacked.com/archive/2004/10/08/bloggingispurevanity.aspx/)?
+But it dawned on me. Perhaps, I lost touch with what blogging was all about. What it's _always_ been all about. Hasn't it always been one big unabashed and [unashamed exercise in vanity][vanity]?
 
-Though writers better than me tend to couch it as something that sounds more
-virtuous with words like "write for yourself" and such while they smirk awash
-in the glow of their laptop screen with a giant glamour shot of themselves on
-the wall.
+Though writers better than me tend to couch it as something that sounds more virtuous with words like "write for yourself" and such while they smirk awash in the glow of their laptop screen with a giant glamour shot of themselves on the wall.
 
-So, um, yeah. I write for myself. But when others than your close friends and
-family (well, my family long since stopped reading it) start to read it, it's
-easy to lose sight of that fact. Also, I'm on a train to Portland and I don't
-really have anything much better to do.
+So, um, yeah. I write for myself. But when others than your close friends and family (well, my family long since stopped reading it) start to read it, it's easy to lose sight of that fact. Also, I'm on a train to Portland and I don't really have anything much better to do.
 
 So on that note, here it is, my look back at 2015.
 
+![new year celebration](https://cloud.githubusercontent.com/assets/19977/12068316/2e14d6a4-afbf-11e5-8280-3cb68d581f69.png)
+
 ## Highlights
 
-### [.NET on the Fringe](http://haacked.com/archive/2015/03/10/dotnetfringe/)
+### [.NET on the Fringe][fringe]
 
-I helped organize this conference and had the pleasure to deliver the closing
-talk about a topic near and dear to me. The conference had a great infectious
-energy and many people told me it inspired them to make their first commit
-to open source.
+I helped organize this conference and had the pleasure to deliver the closing talk about a topic near and dear to me. The conference had a great infectious energy and many people told me it inspired them to make their first commit to open source.
 
-### [Nearly dying in Puerto Rico](http://haacked.com/archive/2015/05/14/puerto-rico/)
+### [Nearly dying in Puerto Rico][puerto-rico]
 
-Ok, I didn't really almost die, but I was really really uncomfortable. I did
-have a wonderful time speaking about GitHub to the Latin American audience and
-exploring the old forts like I was inside Assassin's Creed Black Flag. In 2016
-I'll be speaking in Peru!
+Ok, I didn't really almost die, but I was really really uncomfortable. I did have a wonderful time speaking about GitHub to the Latin American audience and exploring the old forts like I was inside Assassin's Creed Black Flag. In 2016 I'll be speaking in Peru!
 
-### [The release of GitHub Extension for Visual Studio](http://haacked.com/archive/2015/04/30/github-in-your-visual-studio/)
+### [The release of GitHub Extension for Visual Studio][ghvs]
 
 This was a fun collaboration with Microsoft and represents just the beginning. We later [made it open source](http://haacked.com/archive/2015/07/20/ghfvs-oss/)! In 2016, we plan to invest a lot more time and energy into the extension to make your experience working with GitHub projects from Visual Studio better.
 
 ### DevInteresections EU
 
-I had the pleasure to speak at DevIntersections EU in Amsterdam. It was my first time in Amsterdam and I immediately loved it. The week of the conference just happened to coincide with ADE (Amsterdam Dance Event) so there were a lot of great music events to check out. One of my favorite sites though was the library I went to with [the infamous Mr. Hanselman](hanselman.com) and a local friend of his.
+I had the pleasure to speak at [DevIntersections EU][deveu] in Amsterdam. It was my first time in Amsterdam and I immediately loved it. The week of the conference just happened to coincide with ADE (Amsterdam Dance Event) so there
+were a lot of great music events to check out. One of my favorite sites though was the library I went to with [the infamous Mr. Hanselman][hanselman] and a local friend of his.
 
 ### QCon SF
 
-QCon is an international collection of conferences and I was asked to chair the
-the first .NET track in a long while and second one ever. They told me that the
-first one didn't go so well.
+QCon is an international collection of conferences and I was asked to chair the the first .NET track in a long while and second one ever. They told me that the first one didn't go so well.
 
-The title of the track was The Amazing Potential of .NET Open Source. I wanted
-to highlight all the wonderful things happening in the .NET world in the wake
-of Microsoft making a big splash on GitHub. But I also focused on talks I
-thought would have crossover appeal to those who are not .NET developers.
+The title of the track was [The Amazing Potential of .NET Open Source][potential]. I wanted to highlight all the wonderful things happening in the .NET world in the wake of Microsoft making a big splash on GitHub. But I also focused on talks I thought would have crossover appeal to those who are not .NET developers.
 
-I am eternally grateful to the speakers who accepted my invitation and
-delivered a knockout track. Our track ended up being the top rated track based
-on attendee voting of the conference. So I think this .NET thing still has
-legs.
+I am eternally grateful to the speakers who accepted my invitation and delivered a knockout track. Our track ended up being the top rated track based on attendee voting of the conference. So I think this .NET thing still has legs.
+
+### Vacations!
+
+This year the family and I didn't take any major vacations. We did go on an outing to Lake Chelan and nearly got caught in a wild fire. My wife and I went to Vancouver for a couple days to see a concert which was a lot of fun. Next year we're doing a proper vacation to Maui with another family which should be a lot of fun.
 
 ### Looking to 2016
 
-I'm really looking forward to 2016. My team has a new focus to make GitHub
-great for .NET developers and I can't wait to dive into that.
+I'm really looking forward to 2016. My team has a new focus to make GitHub great for .NET developers and I can't wait to dive into that.
 
-It's tough on my kids when I travel, so I try not to speak at too many
-conferences, but there's so many good ones around these days. So far, I plan
-to speak at a DevDays in Peru. I'm also hoping to return to NDC in Oslo, which
+It's tough on my kids when I travel, so I try not to speak at too many conferences, but there's so many good ones around these days. So far, I plan to speak at a DevDays in Peru. I'm also hoping to return to NDC in Oslo, which
 will be exciting.
 
-Other than that, I haven't really confirmed anywhere else. Perhaps we'll throw
-another .NET Fringe.
+Other than that, I haven't really confirmed anywhere else. Perhaps we'll throw another .NET Fringe. I'm hoping to reach some new audiences in some new places so we'll see what the year has in store.
+
+[vanity]: http://haacked.com/archive/2004/10/08/bloggingispurevanity.aspx/
+[fringe]: http://haacked.com/archive/2015/03/10/dotnetfringe/
+[puerto-rico]: http://haacked.com/archive/2015/05/14/puerto-rico/
+[ghvs]: http://haacked.com/archive/2015/04/30/github-in-your-visual-studio/
+[deveu]: http://devintersectioneurope.com/
+[hanselman]: https://hanselman.com
+[potential]: https://qconsf.com/sf2015/track/amazing-potential-net-open-source
