Happy New Year!
Former-commit-id: 443a18de2f2218088ff4460c055e42dbdf9aebca

--- a/_posts/2015/2015-12-31-a-haackedy-2015.md
+++ b/_posts/2015/2015-12-31-a-haackedy-2015.md
@@ -58,6 +58,8 @@ will be exciting.
 
 Other than that, I haven't really confirmed anywhere else. Perhaps we'll throw another .NET Fringe. I'm hoping to reach some new audiences in some new places so we'll see what the year has in store.
 
+Happy New Year!
+
 [vanity]: http://haacked.com/archive/2004/10/08/bloggingispurevanity.aspx/
 [fringe]: http://haacked.com/archive/2015/03/10/dotnetfringe/
 [puerto-rico]: http://haacked.com/archive/2015/05/14/puerto-rico/
