Added a few more tidbits
Former-commit-id: f013d9dc215591af4ecfda34f81e79d8c30c3a2d
Former-commit-id: d23acb7fa6ebe00ce50d759a3ae9ab5359d71f74
Former-commit-id: 0df43a1d53132b6ddbc1652fec30b793f84e1d1b [formerly 07d7ebd202f89516388b6cb82f4a41c41f3f9447]
Former-commit-id: 70c7b274b29762ee5edba2b00a7cf7a93f26fb75

--- a/_posts/2015/2015-12-31-a-haackedy-2015.md
+++ b/_posts/2015/2015-12-31-a-haackedy-2015.md
@@ -22,7 +22,7 @@ So on that note, here it is, my look back at 2015.
 
 ### [.NET on the Fringe][fringe]
 
-I helped organize this conference and had the pleasure to deliver the closing talk about a topic near and dear to me. The conference had a great infectious energy and many people told me it inspired them to make their first commit to open source.
+As one of the organizers of the conference, I had the great pleasure to deliver the closing talk about a topic near and dear to me, [Social Coding](http://communitycasts.co/screencast/Ph_s38uAVXM). The conference had a great infectious energy and many people told me it inspired them to make their first commit to open source.
 
 ### [Nearly dying in Puerto Rico][puerto-rico]
 
@@ -34,20 +34,19 @@ This was a fun collaboration with Microsoft and represents just the beginning. W
 
 ### DevInteresections EU
 
-I had the pleasure to speak at [DevIntersections EU][deveu] in Amsterdam. It was my first time in Amsterdam and I immediately loved it. The week of the conference just happened to coincide with ADE (Amsterdam Dance Event) so there
-were a lot of great music events to check out. One of my favorite sites though was the library I went to with [the infamous Mr. Hanselman][hanselman] and a local friend of his.
+I had the pleasure to speak at [DevIntersections EU][deveu] in Amsterdam. It was my first time in Amsterdam and I immediately loved it. The week of the conference just happened to coincide with ADE (Amsterdam Dance Event) so there were a lot of great music events to check out. One of my favorite sites though was the library I went to with [the infamous Mr. Hanselman][hanselman] and a local friend of his.
 
 ### QCon SF
 
-QCon is an international collection of conferences and I was asked to chair the the first .NET track in a long while and second one ever. They told me that the first one didn't go so well.
+QCon is an international collection of conferences and the organizers asked me to chair the the first .NET track in a long while and the second one ever. They mentioned that the first one didn't go so well.
 
 The title of the track was [The Amazing Potential of .NET Open Source][potential]. I wanted to highlight all the wonderful things happening in the .NET world in the wake of Microsoft making a big splash on GitHub. But I also focused on talks I thought would have crossover appeal to those who are not .NET developers.
 
-I am eternally grateful to the speakers who accepted my invitation and delivered a knockout track. Our track ended up being the top rated track based on attendee voting of the conference. So I think this .NET thing still has legs.
+I am eternally grateful to the speakers who accepted my invitation and delivered a knockout track. Our track ended up being the top rated track based on attendee voting of the conference. So I think this .NET thing still has legs. It probably helped that I didn't speak at the conference.
 
 ### Vacations!
 
-This year the family and I didn't take any major vacations. We did go on an outing to Lake Chelan and nearly got caught in a wild fire. My wife and I went to Vancouver for a couple days to see a concert which was a lot of fun. Next year we're doing a proper vacation to Maui with another family which should be a lot of fun.
+This year the family and I didn't take any major vacations. We did go on an outing to Lake Chelan and [got caught in a wild fire](https://www.instagram.com/p/6YZ35ZNLyl/?taken-by=haacked). My wife and I went to Vancouver for a couple days to see a concert which was a lot of fun. Next year we're doing a proper vacation to Maui with another family which should be a lot of fun.
 
 ### Looking to 2016
 
