Fix a typcial typo

--- a/_posts/2015/2015-10-29-git-shell.md
+++ b/_posts/2015/2015-10-29-git-shell.md
@@ -81,7 +81,7 @@ Write-Host "Setting up Posh-Git"
 
 The other thing to note is if you have already customized PowerShell with a profile, the Git Shell doesn't load your existing PowerShell profile. We wanted to avoid conflicts with existing Posh-Git installs or whatever else you might have. To load your existing profile requires you to opt into this behavior. To do this, create a PowerShell script file named `GitHub.PowerShell_profile.ps1`. Desktop will execute this file, if it exists.
 
-Desktop looks for this file in the same directory as your `$profile` script (typcially `%UserProfile%\Documents\WindowsPowershell\`). I simply load my regular profile from that script.
+Desktop looks for this file in the same directory as your `$profile` script (typically `%UserProfile%\Documents\WindowsPowershell\`). I simply load my regular profile from that script.
 
 Here's the full contents of my `GitHub.PowerShell_profile.ps1`.
 
